<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Lighting</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	 <string name="none_paired">No devices have been paired</string>
    <string name="note_list_device">Nếu không có thiết bị nào trong danh sách "\n" hãy ghép đôi trong android setting</string>
    <string name="select_device_pair">Lựa chọn thiết bị để ghép đôi:</string>
    <string name="title_app">RANG DONG - SMART LIGHTING</string>
    <string name="title_dim_script">Chế Độ DIM</string>
    <string name="join_now">Xem cấu hình</string>
    <string name="login">Login</string>
    <string name="script_1">Kịch Bản 1</string>
    <string name="script_2">Kịch Bản 2</string>
    <string name="script_3">Kịch Bản 3</string>
    <string name="script_4">Kịch Bản 4</string>
    <string name="input_pass_login">Nhập mật khẩu</string>
    <string name="button_ok_screen_login">OK</string>
    <string name="txtCredits"><a href="http://www.rangdongvn.com/">www.rangdongvn.com</a></string>
    <string name="setting_group_setting_screen">Cài đặt nhóm</string>
    <string name="setting_script_setting_screen">Cài đặt kịch bản</string>
    <string name="control_setting_screen">Điều khiển</string>
    <string name="follow_setting_screen">Theo dõi</string>
    <string name="add_light_to_group">Thêm đèn vào nhóm</string>
    <string name="add_script">Thêm kịch bản</string>
    <string name="login_title">Đăng nhập</string>
    <string name="setting_title">Cài Đặt Hệ Thống</string>
    <string name="detail_group_title">Chi tiết nhóm</string>
    <string name="detail_script_title">Chi tiết kịch bản</string>
    <string name="list_lights_title">Danh sách đèn</string>
    <string name="control_script_title">Điều khiển kịch bản</string>
    <string name="follow_lights_title">Theo dõi trạng thái đèn</string>
    <string name="info_setting_title">Thông tin cài đặt</string>
    <string name="info_group_title">Thông tin nhóm</string>
    <string name="info_script_title">Thông tin kịch bản</string>
</resources>
