<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_bar"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_bar_title"
        android:background="@color/background_bar"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/icon"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_app"
            android:textColor="@color/text_color"
            android:textSize="20dp"
            android:textStyle="italic" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/background_view_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_scrip_1_vs_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="30dp"
                android:background="@color/background_bar"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/btnLevelOne"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/script_1"
                    android:textColor="@color/text_color_button"
                    android:textSize="@dimen/text_size" />

                <Button
                    android:id="@+id/btnLevelTwo"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignBottom="@+id/buttonOn"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/script_2"
                    android:textColor="@color/text_color_button" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_scrip_3_vs_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_bar"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLevelThree"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/script_3"
                    android:textColor="@color/text_color_button" />

                <Button
                    android:id="@+id/btnLevelFour"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/script_4"
                    android:textColor="@color/text_color_button" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/title_dim_script"
                android:textColor="@color/text_color"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/turn_dim_script"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:src="@drawable/switch_off" />

                <SeekBar
                    android:id="@+id/sb_choose_script_dim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2.3"
                    android:max="100"
                    android:progress="0"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/display_result_choose_script_dim"
                    android:layout_width="@dimen/button_script_main_size"
                    android:layout_height="@dimen/button_script_main_size"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.2"
                    android:background="@color/background_bar"
                    android:text="0%"
                    android:textColor="@color/text_color"
                    android:textSize="8dp"
                    android:visibility="invisible" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@color/background_view_bar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button_join_now"
                        android:layout_width="@dimen/button_script_main_width"
                        android:layout_height="@dimen/button_script_main_height"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginRight="@dimen/default_margin"
                        android:background="@drawable/button_round"
                        android:text="@string/join_now"
                        android:textColor="@color/background_bar"
                        android:textSize="@dimen/text_size" />

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="@dimen/button_script_main_width"
                        android:layout_height="@dimen/button_script_main_height"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginRight="@dimen/default_margin"
                        android:background="@drawable/button_round"
                        android:text="@string/login"
                        android:textColor="@color/background_bar"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>